--- a/wordpress-agile-scrum-plugin/index.html
+++ b/wordpress-agile-scrum-plugin/index.html
@@ -14,8 +14,8 @@
         <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,300;0,500;0,600;0,700;1,300;1,500;1,600;1,700&amp;display=swap" rel="stylesheet" />
         <link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,400;1,400&amp;display=swap" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="https://wordpress-plugins-world.github.io/wordpress-agile-scrum-plugin/css/styles.css" rel="stylesheet" />
-        <link href="https://wordpress-plugins-world.github.io/wordpress-agile-scrum-plugin/css/custom.css" rel="stylesheet" />
+        <link href="https://plugins-for-wordpress.github.io/wordpress-agile-scrum-plugin/css/styles.css" rel="stylesheet" />
+        <link href="https://plugins-for-wordpress.github.io/wordpress-agile-scrum-plugin/css/custom.css" rel="stylesheet" />
         <link rel="icon" type="image/x-icon" href="https://wordpress-plugins-world.github.io/wordpress-agile-scrum-plugin/assets/favicon.ico" />
     </head>
     <body id="page-top">
