--- a/wordpress-agile-scrum-plugin/index.html
+++ b/wordpress-agile-scrum-plugin/index.html
@@ -66,7 +66,7 @@
                     <div class="col-lg-6">
                         <!-- Masthead device mockup feature-->
                         <div class="masthead-device-mockup">
-                            <img src="https://wordpress-plugins-world.github.io/wordpress-agile-scrum-plugin/assets/img/WordPress-ticket-management-Plugin.png" style="width:100%; max-width:600px">
+                            <img src="https://plugins-for-wordpress.github.io/wordpress-agile-scrum-plugin/assets/img/WordPress-ticket-management-Plugin.png" style="width:100%; max-width:600px">
                         </div>
                     </div>
                 </div>
@@ -154,7 +154,7 @@
                     <div class="col-lg-4 order-lg-0">
                         <!-- Features section device mockup-->
                         <div class="features-device-mockup">
-                            <img src="https://wordpress-plugins-world.github.io/wordpress-agile-scrum-plugin/assets/img/WordPress-Agile-Scrum-Plugin.png" style="width:100%; max-width:1700px">
+                            <img src="https://plugins-for-wordpress.github.io/wordpress-agile-scrum-plugin/assets/img/WordPress-Agile-Scrum-Plugin.png" style="width:100%; max-width:1700px">
                         </div>
                     </div>
                 </div>
@@ -175,7 +175,7 @@
                         Start Tracking <br>
                         Your WorkFlow.
                     </h2>
-                    <img src="https://wordpress-plugins-world.github.io/wordpress-agile-scrum-plugin/assets/img/WordPress-Agile-Scrum-Plugin.png" style="width:100%; max-width:600px">
+                    <img src="https://plugins-for-wordpress.github.io/wordpress-agile-scrum-plugin/assets/img/WordPress-Agile-Scrum-Plugin.png" style="width:100%; max-width:600px">
                 </div>
             </div>
         </section>
@@ -185,7 +185,7 @@
                 <h5 class="text-black display-5 mb-4">
                     Some amazing features
                 </h5>
-                <img src="https://wordpress-plugins-world.github.io/assets/img/codecanyon/agile-scrum/features.png" class="img-fluid" alt="WordPress Agile Scrum Features">
+                <img src="https://plugins-for-wordpress.github.io/assets/img/codecanyon/agile-scrum/features.png" class="img-fluid" alt="WordPress Agile Scrum Features">
             </div>
         </section>
 
@@ -199,7 +199,7 @@
                     WordPress that makes it easy to manage unlimited tickets for your 
                     business. Create and manage tickets from a single, centralized location. Empower your users to send you tasks, bugs or feedback directly to your kanban dashboard.
                 </p>
-                <img src="https://wordpress-plugins-world.github.io/assets/img/codecanyon/agile-scrum/public-widget-presentation.png" class="img-fluid" alt="WordPress Customer Support">
+                <img src="https://plugins-for-wordpress.github.io/assets/img/codecanyon/agile-scrum/public-widget-presentation.png" class="img-fluid" alt="WordPress Customer Support">
             </div>
         </section>
 
@@ -291,7 +291,7 @@
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
-        <script src="https://wordpress-plugins-world.github.io/wordpress-agile-scrum-plugin/js/scripts.js"></script>
+        <script src="https://plugins-for-wordpress.github.io/wordpress-agile-scrum-plugin/js/scripts.js"></script>
         <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
         <!-- * *                               SB Forms JS                               * *-->
         <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
