--- a/wordpress-invoices-plugin-woocommerce-integration/index.html
+++ b/wordpress-invoices-plugin-woocommerce-integration/index.html
@@ -14,8 +14,8 @@
         <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,300;0,500;0,600;0,700;1,300;1,500;1,600;1,700&amp;display=swap" rel="stylesheet" />
         <link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,400;1,400&amp;display=swap" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="https://wordpress-plugins-world.github.io/wordpress-invoices-plugin-woocommerce-integration/css/styles.css" rel="stylesheet" />
-        <link href="https://wordpress-plugins-world.github.io/wordpress-invoices-plugin-woocommerce-integration/css/custom.css" rel="stylesheet" />
+        <link href="https://plugins-for-wordpress.github.io/wordpress-invoices-plugin-woocommerce-integration/css/styles.css" rel="stylesheet" />
+        <link href="https://plugins-for-wordpress.github.io/wordpress-invoices-plugin-woocommerce-integration/css/custom.css" rel="stylesheet" />
         <link rel="icon" type="image/x-icon" href="https://wordpress-plugins-world.github.io/wordpress-invoices-plugin-woocommerce-integration/assets/favicon.ico" />
     </head>
     <body id="page-top">
@@ -66,7 +66,7 @@
                     <div class="col-lg-6">
                         <!-- Masthead device mockup feature-->
                         <div class="masthead-device-mockup">
-                            <img src="https://wordpress-plugins-world.github.io/wordpress-invoices-plugin-woocommerce-integration/assets/img/wordpress-invoice-plugin-standalone.png" style="width:100%; max-width:600px">
+                            <img src="https://plugins-for-wordpress.github.io/wordpress-invoices-plugin-woocommerce-integration/assets/img/wordpress-invoice-plugin-standalone.png" style="width:100%; max-width:600px">
                         </div>
                     </div>
                 </div>
@@ -163,7 +163,7 @@
                     <div class="col-lg-4 order-lg-0">
                         <!-- Features section device mockup-->
                         <div class="features-device-mockup">
-                            <img src="https://wordpress-plugins-world.github.io/wordpress-invoices-plugin-woocommerce-integration/assets/img/templates.png" style="width:100%; max-width:1700px">
+                            <img src="https://plugins-for-wordpress.github.io/wordpress-invoices-plugin-woocommerce-integration/assets/img/templates.png" style="width:100%; max-width:1700px">
                         </div>
                     </div>
                 </div>
@@ -187,7 +187,7 @@
                                 <br />
                                 in PDF
                             </h2>
-                            <img src="https://wordpress-plugins-world.github.io/wordpress-invoices-plugin-woocommerce-integration/assets/img/create-pdf-invoice-wordpress.png" style="width:100%; max-width:600px">
+                            <img src="https://plugins-for-wordpress.github.io/wordpress-invoices-plugin-woocommerce-integration/assets/img/create-pdf-invoice-wordpress.png" style="width:100%; max-width:600px">
                         </div>
                         <div class="text-center col-lg-4" style="display:flex; align-items: center; line-height:40px;">
                             “WP Invoices” is electronic invoicing and warehouse management 
@@ -205,7 +205,7 @@
                 <h4 class="text-black display-5">
                     Some amazing features
                 </h4>
-                <img src="https://wordpress-plugins-world.github.io/assets/img/codecanyon/wp-invoices/many-features.png" class="img-fluid" alt="WordPress Invoices Issue Features">
+                <img src="https://plugins-for-wordpress.github.io/assets/img/codecanyon/wp-invoices/many-features.png" class="img-fluid" alt="WordPress Invoices Issue Features">
             </div>
         </section>
 
@@ -214,7 +214,7 @@
                 <h4 class="text-black display-5">
                     Customization
                 </h4>
-                <img src="https://wordpress-plugins-world.github.io/assets/img/codecanyon/wp-invoices/customization.png" class="img-fluid" alt="WordPress Invoices Issue Customization">
+                <img src="https://plugins-for-wordpress.github.io/assets/img/codecanyon/wp-invoices/customization.png" class="img-fluid" alt="WordPress Invoices Issue Customization">
             </div>
         </section>
 
@@ -223,7 +223,7 @@
                 <h4 class="text-black display-5 mb-4">
                     WooCommerce Integration
                 </h4>
-                <img src="https://wordpress-plugins-world.github.io/assets/img/codecanyon/wp-invoices/woocommerce.png" style="max-width:800px;" class="img-fluid" alt="WordPress Invoices Issue With WooCommerce">
+                <img src="https://plugins-for-wordpress.github.io/assets/img/codecanyon/wp-invoices/woocommerce.png" style="max-width:800px;" class="img-fluid" alt="WordPress Invoices Issue With WooCommerce">
             </div>
         </section>
 
@@ -232,7 +232,7 @@
                 <h4 class="text-black display-5 mb-4">
                     Rest API Integration
                 </h4>
-                <img src="https://wordpress-plugins-world.github.io/assets/img/codecanyon/wp-invoices/rest-api.png" class="img-fluid" alt="WordPress Invoices REST Api Integration">
+                <img src="https://plugins-for-wordpress.github.io/assets/img/codecanyon/wp-invoices/rest-api.png" class="img-fluid" alt="WordPress Invoices REST Api Integration">
             </div>
         </section>
 
@@ -324,7 +324,7 @@
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
-        <script src="https://wordpress-plugins-world.github.io/wordpress-invoices-plugin-woocommerce-integration/js/scripts.js"></script>
+        <script src="https://plugins-for-wordpress.github.io/wordpress-invoices-plugin-woocommerce-integration/js/scripts.js"></script>
         <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
         <!-- * *                               SB Forms JS                               * *-->
         <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
