--- a/wordpress-login-defender-plugin/index.html
+++ b/wordpress-login-defender-plugin/index.html
@@ -14,8 +14,8 @@
         <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,300;0,500;0,600;0,700;1,300;1,500;1,600;1,700&amp;display=swap" rel="stylesheet" />
         <link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,400;1,400&amp;display=swap" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="https://wordpress-plugins-world.github.io/wordpress-login-defender-plugin/css/styles.css" rel="stylesheet" />
-        <link href="https://wordpress-plugins-world.github.io/wordpress-login-defender-plugin/css/custom.css" rel="stylesheet" />
+        <link href="https://plugins-for-wordpress.github.io/wordpress-login-defender-plugin/css/styles.css" rel="stylesheet" />
+        <link href="https://plugins-for-wordpress.github.io/wordpress-login-defender-plugin/css/custom.css" rel="stylesheet" />
         <link rel="icon" type="image/x-icon" href="https://wordpress-plugins-world.github.io/wordpress-login-defender-plugin/assets/favicon.ico" />
     </head>
     <body id="page-top">
@@ -66,7 +66,7 @@
                     <div class="col-lg-6">
                         <!-- Masthead device mockup feature-->
                         <div class="masthead-device-mockup">
-                            <img src="https://wordpress-plugins-world.github.io/wordpress-login-defender-plugin/assets/img/wp-login-secure.png" style="width:100%; max-width:600px">
+                            <img src="https://plugins-for-wordpress.github.io/wordpress-login-defender-plugin/assets/img/wp-login-secure.png" style="width:100%; max-width:600px">
                         </div>
                     </div>
                 </div>
@@ -251,7 +251,7 @@
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
-        <script src="https://wordpress-plugins-world.github.io/wordpress-login-defender-plugin/js/scripts.js"></script>
+        <script src="https://plugins-for-wordpress.github.io/wordpress-login-defender-plugin/js/scripts.js"></script>
         <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
         <!-- * *                               SB Forms JS                               * *-->
         <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
