--- a/wordpress-invoices-plugin-woocommerce-integration/index.html
+++ b/wordpress-invoices-plugin-woocommerce-integration/index.html
@@ -223,7 +223,7 @@
                 <h4 class="text-black display-5 mb-4">
                     WooCommerce Integration
                 </h4>
-                <img src="https://plugins-for-wordpress.github.io/assets/img/codecanyon/wp-invoices/woocommerce.png" style="max-width:800px;" class="img-fluid" alt="WordPress Invoices Issue With WooCommerce">
+                <img src="https://plugins-for-wordpress.github.io/assets/img/codecanyon/wp-invoices/woocommerce.png" style="width:100%;max-width:800px;" class="img-fluid" alt="WordPress Invoices Issue With WooCommerce">
             </div>
         </section>
 
